--- a/html/blog-personal.html
+++ b/html/blog-personal.html
@@ -47,7 +47,7 @@
         como administrador y cómo he aplicado mis habilidades en el mundo del
         emprendimiento digital. ¡Únete a mí en este viaje hacia la excelencia
         en el desarrollo web y descubre cómo la tecnología puede abrir nuevas
-        oportunidades y desafíos emocionantes!"
+        oportunidades y desafíos emocionantes.
       </p>
     </section>
 
@@ -489,7 +489,7 @@
           <a href="https://www.linkedin.com/in/solartiandev/" target="_blank" rel="noopener noreferrer">
             <i class="fab fa-linkedin"></i>
           </a>
-          <p>© 2023 SolartianDev. Todos los derechos reservados.</p>
+          <h3>© 2023 SolartianDev. Todos los derechos reservados.</h3>
         </footer>
       </section>
   </main>
