--- a/html/blog-personal.html
+++ b/html/blog-personal.html
@@ -153,16 +153,16 @@
       </h3>
       <figure class="contenedor-imagenes">
         <picture>
-          <img src="../../assets/frame1.PNG" alt="Principales Frameworks" class="imagen-framework-cont" >
+          <img src="../assets/frame1.PNG" alt="Principales Frameworks" class="imagen-framework-cont" >
         </picture>
         <picture>
-          <img src="../../assets/frame2.PNG" alt="Principales Frameworks" class="imagen-framework-cont" >
+          <img src="../assets/frame2.PNG" alt="Principales Frameworks" class="imagen-framework-cont" >
         </picture>
         <picture>
-          <img src="../../assets/frame3.PNG" alt="Principales Frameworks" class="imagen-framework-cont" >
+          <img src="../assets/frame3.PNG" alt="Principales Frameworks" class="imagen-framework-cont" >
         </picture>
         <picture>
-          <img src="../../assets/frame4.PNG" alt="Principales Frameworks" class="imagen-framework-cont" >
+          <img src="../assets/frame4.PNG" alt="Principales Frameworks" class="imagen-framework-cont" >
         </picture>
       </figure>
       <article class="educativa-segmentos">
@@ -227,7 +227,7 @@
           Ventajas que se tienen al ser desarrollador web Front-end
         </h3>
         <picture>
-          <img src="../../assets/front.PNG" alt="Front-end" class="imagen-framework" >
+          <img src="../assets/front.PNG" alt="Front-end" class="imagen-framework" >
         </picture>
         
           <p class="educativa-segmentos-parr">
@@ -274,7 +274,7 @@
         <h3 id="ventajas-back" class="ventajas-back">
           Ventajas que acompañan al desarrollador Back-End
         </h3>
-        <img src="../../assets/back.PNG" alt="back" class="imagen-framework" >
+        <img src="../assets/back.PNG" alt="back" class="imagen-framework" >
         <p class="educativa-segmentos-parr">
           Alta demanda laboral: La demanda de back end sigue siendo muy alta
           debido al crecimiento constante de la industria tecnológica y al
@@ -321,7 +321,7 @@
       <article class="educativa-segmentos">
         <h3>Ventajas al ser Desarrollador Full-Stack</h3>
         <picture>
-          <img src="../../assets/fulls.PNG" alt="publicacion-full-stack" class="imagen-framework" >
+          <img src="../assets/fulls.PNG" alt="publicacion-full-stack" class="imagen-framework" >
         </picture>
         <p class="educativa-segmentos-parr">
           Un desarrollador full-stack es un profesional de la tecnología que
@@ -344,7 +344,7 @@
         Experiencias como administrador deportivo
       </h2>
       <picture>
-        <img src="../../assets/admin.PNG" alt="publicacion-admin" id="experiencias-image" class="experience-image" >
+        <img src="../assets/admin.PNG" alt="publicacion-admin" id="experiencias-image" class="experience-image" >
       </picture>
       <p id="experiencias-content" class="experience-content">
         Estudiar Administración Deportiva en la Universidad Distrital durante
@@ -401,7 +401,7 @@
         Consejos de e-commerce
       </h2>
       <picture>
-        <img src="../../assets/ecomerce.PNG" alt="publicacion-ecommerce" id="ecommerce-image" class="ecommerce-image" >
+        <img src="../assets/ecomerce.PNG" alt="publicacion-ecommerce" id="ecommerce-image" class="ecommerce-image" >
       </picture>
       <p id="ecommerce-content" class="ecommerce-content">
         Desde que era niño, siempre había soñado con tener mi propio negocio.
